fixed spacing issue with payin

--- a/sass/themes/donate/donate-cr/components/form/_form.scss
+++ b/sass/themes/donate/donate-cr/components/form/_form.scss
@@ -106,7 +106,7 @@ select {
   input[type="checkbox"]+span {
     top: 50%;
     left: 20px;
-
+    transform: translateY(-50%);
   }
   input[type="checkbox"]:checked+span {
     background-color: $colour-white;
